Refactored pullRequest form

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -233,3 +233,8 @@ input[type=number]::-webkit-outer-spin-button {
     -o-box-shadow: 0 1px 1px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.1);
     box-shadow: 0 1px 1px rgba(0,0,0,0.2), inset 0 1px 1px rgba(0,0,0,0.1);
 }
+
+.vmiddle-inline {
+    display:inline-block !important;
+    vertical-align: middle !important;
+}
