--- a/app/views/git/create.scala.html
+++ b/app/views/git/create.scala.html
@@ -18,7 +18,10 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(title:String, form: Form[PullRequest], project: Project, projects: List[Project] , fromProject:Project, toProject:Project, fromBranches: List[playRepository.GitBranch], toBranches: List[playRepository.GitBranch], pullRequest:models.PullRequest)
+@(title:String, form:Form[PullRequest], project:Project, projects:List[Project],
+  fromProject:Project, toProject:Project,
+  fromBranches:List[playRepository.GitBranch], toBranches:List[playRepository.GitBranch],
+  pullRequest:models.PullRequest)
 
 @import scala.collection.Map
 @import utils.TemplateHelper._
@@ -31,121 +34,104 @@
     <div class="project-page-wrap">
         <div class="content-wrap frm-wrap">
             @helper.form(action=routes.PullRequestApp.newPullRequest(project.owner, project.name), 'enctype -> "multipart/form-data", 'class->"nm"){
-                <div class="row-fluid">
-                    <div class="span10">
-                        <div class="pull-request-wrap">
-                            <div class="option request-from">
-                                <div class="option-label">
-                                    <label>@Messages("pullRequest.from")</label>
-                                    <div class="btn-group branches" data-name="fromProjectId">
-                                        <button class="btn dropdown-toggle auto" data-toggle="dropdown">
-                                            <span class="d-label">@Messages("pullRequest.select.branch")</span>
-                                            <span class="d-caret"><span class="caret"></span></span>
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            @for(repo <- projects) {
-                                            @if(ProjectUser.isMember(UserApp.currentUser().id, repo.id)) {
-                                            <li data-value="@repo.id" @if(repo.id == fromProject.id) {data-selected="true"}>
-                                            <a href="#"><span class="label">repo</span>@repo.owner/@repo.name</a>
-                                            </li>
-                                            }
-                                            }
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="option-desc mt5">
-                                    <div class="btn-group branches" data-name="fromBranch">
-                                        <button class="btn dropdown-toggle auto" data-toggle="dropdown">
-                                            <span class="d-label">@Messages("pullRequest.select.branch")</span>
-                                            <span class="d-caret"><span class="caret"></span></span>
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            @for(branch <- fromBranches) {
-                                            @common.branchItem("pullRequest", null, branch.getName, null,
-                                            utils.TemplateHelper.equals(pullRequest.fromBranch, branch.getName))
-                                            }
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="arrow">
-                                <i class="yobicon-right-2"></i>
-                            </div>
-
-                            <div class="option request-to">
-                                <div class="option-label">
-                                    <label>@Messages("pullRequest.to")</label>
-                                    <div class="btn-group branches" data-name="toProjectId">
-                                        <button class="btn dropdown-toggle auto" data-toggle="dropdown">
-                                            <span class="d-label">@Messages("pullRequest.select.branch")</span>
-                                            <span class="d-caret"><span class="caret"></span></span>
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            @for(repo <- projects) {
-                                            <li data-value="@repo.id" @if(repo.id == toProject.id) {data-selected="true"}>
-                                            <a href="#"><span class="label">repo</span>@repo.owner/@repo.name</a>
-                                            </li>
-                                            }
-                                        </ul>
-                                    </div>
-                                </div>
-                                <div class="option-desc mt5">
-                                    <div class="btn-group branches" data-name="toBranch">
-                                        <button class="btn dropdown-toggle auto" data-toggle="dropdown">
-                                            <span class="d-label">@Messages("pullRequest.select.branch")</span>
-                                            <span class="d-caret"><span class="caret"></span></span>
-                                        </button>
-                                        <ul class="dropdown-menu">
-                                            @for(branch <- toBranches) {
-                                            @common.branchItem("pullRequest", null, branch.getName, null,
-                                            utils.TemplateHelper.equals(pullRequest.toBranch, branch.getName))
-                                            }
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                <div class="pull-request-wrap">
+                    <!-- from -->
+                    <div class="pull-left">
+                        <label for="fromProjectId" class="field-title">@Messages("pullRequest.from")</label>
+                        <select id="fromProjectId" name="fromProjectId" data-toggle="select2" class="mr5">
+                            <option></option>
+                            @for(repo <- projects if ProjectUser.isMember(UserApp.currentUser().id, repo.id)) {
+                                <option value="@repo.id" @if(repo.id == fromProject.id){ selected }>
+                                    @repo.owner / @repo.name
+                                </option>
+                            }
+                        </select>
+                        <select id="fromBranch" name="fromBranch" data-toggle="select2" data-format="branch"
+                                data-dropdown-css-class="branches" data-placeholder="@Messages("pullRequest.select.branch")">
+                            <option></option>
+                            @for(branch <- fromBranches) {
+                                <option value="@branch.getName" @if(branch.getName == pullRequest.fromBranch){ selected }>@branch.getName</option>
+                            }
+                        </select>
                     </div>
-                    <div class="span2">
-                        <table class="request-summary">
-                            <tr>
-                                <th>@Messages("pullRequest.is.safe.title")</th>
-                                <td id="ableToMerge">
-                                    @Messages("pullRequest.is.checking")
-                                </td>
-                            </tr>
-                            <tr>
-                                <th>@Messages("pullRequest.commmit.count")</th>
-                                <td id="commitCount">
-                                    @Messages("pullRequest.is.checking")
-                                </td>
-                            </tr>
-                        </table>
+                    <!-- // -->
+
+                    <div class="arrow">
+                        <i class="yobicon-right-2"></i>
+                    </div>
+
+                    <!-- to -->
+                    <div class="pull-right">
+                        <label for="toProjectId" class="field-title">@Messages("pullRequest.to")</label>
+                        <select id="toProjectId" name="toProjectId" data-toggle="select2" class="mr5">
+                            <option></option>
+                            @for(repo <- projects){
+                                <option value="@repo.id" @if(repo.id == toProject.id){ selected }>
+                                    @repo.owner / @repo.name
+                                </option>
+                            }
+                        </select>
+                        <select id="toBranch" name="toBranch" data-toggle="select2" data-format="branch"
+                                data-dropdown-css-class="branches" data-placeholder="@Messages("pullRequest.select.branch")">
+                            <option></option>
+                            @for(branch <- toBranches) {
+                                <option value="@branch.getName" @if(branch.getName == pullRequest.toBranch){ selected }>@branch.getName</option>
+                            }
+                        </select>
+                    </div>
+                    <!-- // -->
+                </div>
+
+                <div id="status" class="alert mt20 mb20">
+                    @Messages("pullRequest.is.merging")
+                </div>
+
+                <div>
+                    <input type="text" id="title" name="title" maxlength="255" class="text" placeholder="@Messages("title")">
+                    <div style="position: relative;">
+                        @common.editor("body", pullRequest.body, "", "content-body")
+                    </div>
+                    @common.fileUploader(ResourceType.PULL_REQUEST, null)
+                    @common.markdown(project)
+
+                    <div class="actions">
+                        <button type="submit" class="ybtn ybtn-success">@Messages("pullRequest.send")</button>
+                        <a href="javascript:history.back();" class="ybtn">@Messages("button.cancel")</a>
                     </div>
                 </div>
 
-                <div id="frmWrap">
-                    @* this area will be replaced with asynchronously by yobi.git.Write.js after load this page. *@
-                    <input type="hidden" id="title">
-                    <textarea id="body" style="display: none;" data-editor-mode="content-body">@pullRequest.body</textarea>
-                    <div id="spin" style="position: absolute; top:50%; left:50%"></div>
+                <ul class="nav nav-tabs mt20">
+                    <li class="active">
+                        <a href="#__commits" data-toggle="tab">
+                            <span class="vmiddle-inline">@Messages("pullRequest.menu.commit")</span>
+                            <span id="numOfCommits" class="num-badge vmiddle-inline"></span>
+                        </a>
+                    </li>
+                </ul>
+
+                <div class="tab-content">
+                    <div id="__commits" class="code-browse-wrap tab-pane active">
+                    @** this area will be replaced with asynchronously by yobi.git.Write.js after load this page. **@
+                    </div>
                 </div>
             }
         </div>
     </div>
 </div>
+
+@common.select2()
+
 <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.css")">
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.caret.min.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.js")"></script>
 <script type="text/javascript">
-$(document).ready(function() {
+$(function(){
     $yobi.loadModule("git.Write", {
-        "sFormURL"      : "@routes.PullRequestApp.newPullRequestForm(project.owner, project.name)",
-        "welFromProject": $("div[data-name='fromProjectId']"),
-        "welToProject"  : $("div[data-name='toProjectId']"),
-        "welFromBranch" : $("div[data-name='fromBranch']"),
-        "welToBranch"   : $("div[data-name='toBranch']")
+        "mergeResultURL": "@routes.PullRequestApp.mergeResult(project.owner, project.name)",
+        "fromProject" : $("#fromProjectId"),
+        "toProject"   : $("#toProjectId"),
+        "fromBranch"  : $("#fromBranch"),
+        "toBranch"    : $("#toBranch")
     });
 
     // yobi.Mention
