--- a/app/assets/stylesheets/less/_reponsive.less
+++ b/app/assets/stylesheets/less/_reponsive.less
@@ -119,4 +119,12 @@
              width:980px;
         }
     }
+
+    .issue-info {
+        padding:15px 0 0 10px;
+    }
+
+    .markdown-help .markdown-help-nav li {
+        padding: 5px 8px;
+    }
 }
