--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -752,6 +752,7 @@ span.issue-label {
     &.ybtn-fullsize {
         display:block;
         width:100%;
+        box-sizing:border-box;
     }
 
     &.ybtn-padding {
