--- a/app/views/issue/partial_massupdate.scala.html
+++ b/app/views/issue/partial_massupdate.scala.html
@@ -72,7 +72,7 @@
 
         <div id="assignee" class="btn-group" data-name="assignee.id">
             <button class="btn dropdown-toggle medium" data-toggle="dropdown" disabled="disabled">
-                <span class="d-label">@Messages("issue.update.assignee")</span>
+                <span class="d-label">@Messages("issue.update.assignee.id")</span>
                 <span class="d-caret"><span class="caret"></span></span>
             </button>
             <ul class="dropdown-menu mass-update-list">
@@ -98,7 +98,7 @@
         @if(project.menuSetting.milestone) {
         <div id="milestone" class="btn-group" data-name="milestone.id">
             <button class="btn dropdown-toggle medium" data-toggle="dropdown" disabled="disabled">
-                <span class="d-label">@Messages("issue.update.milestone")</span>
+                <span class="d-label">@Messages("issue.update.milestone.id")</span>
                 <span class="d-caret"><span class="caret"></span></span>
             </button>
             <ul class="dropdown-menu mass-update-list">
