--- a/app/views/issue/my_partial_list.scala.html
+++ b/app/views/issue/my_partial_list.scala.html
@@ -82,7 +82,7 @@
                 }
 
                 @for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {
-                    <a href="@urlToList(issue.project, searchCondition.state)&labelIds=@label.id" class="label issue-label list-label" data-label-id="@label.id" data-color="@label.color" style="background:@label.color">@label.name</a>
+                    <a href="@urlToList(issue.project, searchCondition.state)&labelIds=@label.id" class="label issue-label list-label" data-label-id="@label.id" style="background:@label.color">@label.name</a>
                 }
             </div>
         </div>
