--- a/app/views/issue/partial_assignee.scala.html
+++ b/app/views/issue/partial_assignee.scala.html
@@ -23,6 +23,7 @@
 @import utils.AccessControl._
 
 <select id="assignee" name="assignee.user.id"
+        data-field-name="assignee.id"
         data-toggle="select2" data-format="user">
     <option value="@User.anonymous.id" @if(issue == null || issue.assignee == null){selected}>@Messages("issue.noAssignee")</option>
     @if(isAllowed(UserApp.currentUser(), project.asResource(), Operation.ASSIGN_ISSUE)) {
