--- a/app/views/project/partial_settingmenu.scala.html
+++ b/app/views/project/partial_settingmenu.scala.html
@@ -37,6 +37,7 @@
 <ul class="nav nav-tabs">
     @makeSubMenu(routes.ProjectApp.settingForm(project.owner, project.name),  Messages("project.setting"), 0)
     @makeSubMenu(routes.ProjectApp.members(project.owner, project.name),      Messages("project.member"), project.enrolledUsers.size)
+    @makeSubMenu(routes.IssueLabelApp.labels(project.owner, project.name),    Messages("issue.label"), 0)
+    @makeSubMenu(routes.ProjectApp.transferForm(project.owner, project.name), Messages("project.transfer"), 0)
     @makeSubMenu(routes.ProjectApp.deleteForm(project.owner, project.name),   Messages("project.delete"), 0)
-    @makeSubMenu(routes.ProjectApp.transferForm(project.owner, project.name),   Messages("project.transfer"), 0)
 </ul>
